--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
     #button-container {
       position: absolute;
-      bottom: 70px;
+      bottom: 150px;
       left: 50%;
       transform: translateX(-50%);
       display: flex;
@@ -130,17 +130,18 @@
   </div>
 
   <div id="button-container">
-
+   
+<a id="boton-direccion" href="https://maps.app.goo.gl/eXQWd8Jq9JZvbQrP7" class="button">
+      <i class="fas fa-map-marker-alt"></i> <b>VER UBICACIÓN<b>
+      </a>
+        
     <a id="boton-asistencia"
       href="https://api.whatsapp.com/send?phone=+526141067204&text=%C2%A1Hola%21+Muchas+gracias+por+la+invitaci%C3%B3n%2C+ah%C3%AD+estaremos%21%21+%F0%9F%A5%B3"
       class="button">
       <i class="fab fa-whatsapp"></i> <b>CONFIRMAR ASISTENCIA<b>
     </a>
 
-    <a id="boton-direccion" href="https://maps.app.goo.gl/RUdM7UorUJPRU93Y8" class="button">
-      <i class="fas fa-map-marker-alt"></i> <b>VER UBICACIÓN<b>
-    </a>
-
+    
 
 
 
